Closed
Bug 608984
Opened 15 years ago
Closed 15 years ago
Minimize, maximize/restore, close buttons have a blue hue when hovered if the Firefox Button is on.
Categories
(Core :: Widget: Win32, defect)
Tracking
()
VERIFIED
FIXED
mozilla2.0b8
People
(Reporter: alex_mayorga, Assigned: dao)
References
Details
Attachments
(2 files)
2.69 KB,
image/jpeg
|
Details | |
1.01 KB,
patch
|
jimm
:
review+
joe
:
approval2.0+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 6.0; rv:2.0b8pre) Gecko/20101102 Firefox/4.0b8pre
Build Identifier: Mozilla/5.0 (Windows NT 6.0; rv:2.0b8pre) Gecko/20101102 Firefox/4.0b8pre
Using "Windows Classic" theme and Mozilla/5.0 (Windows NT 6.0; rv:2.0b8pre) Gecko/20101102 Firefox/4.0b8pre ID:20101102042148 minimize, maximize/restore, close buttons have a blue hue when hovered if the Firefox Button is on whereas all other windows are solid black and don't change to blue when hovered.
Reproducible: Always
Steps to Reproduce:
1. Hover over minimize, maximize/restore, close buttons with Firefox Button on.
Actual Results:
Minimize, maximize/restore, close buttons have a blue hue when hovered.
Expected Results:
Minimize, maximize/restore, close buttons remain solid black when hovered.
Reporter | ||
Comment 1•15 years ago
|
||
Reporter | ||
Updated•15 years ago
|
Blocks: FirefoxButton
Assignee | ||
Updated•15 years ago
|
Component: Theme → Widget: Win32
Product: Firefox → Core
QA Contact: theme → win32
![]() |
||
Comment 2•15 years ago
|
||
Odd, Not seeing this on Win7. I don't have vista to test but I'll check xp.
Assignee | ||
Comment 3•15 years ago
|
||
I'm seeing this on XP as well as 7. The buttons shouldn't ever have a hover state with classic, should they?
Assignee: nobody → dao
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #490360 -
Flags: review?(jmathies)
Assignee | ||
Updated•15 years ago
|
OS: Windows Vista → All
Version: unspecified → Trunk
![]() |
||
Comment 4•15 years ago
|
||
Comment on attachment 490360 [details] [diff] [review]
patch
Yeah. I'm surprised they do, I guess ms never put this to use but supported it their code.
Attachment #490360 -
Flags: review?(jmathies) → review+
Assignee | ||
Updated•15 years ago
|
Attachment #490360 -
Flags: approval2.0?
Updated•15 years ago
|
Attachment #490360 -
Flags: approval2.0? → approval2.0+
Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
Assignee | ||
Comment 5•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Reporter | ||
Comment 6•15 years ago
|
||
WFM on Mozilla/5.0 (Windows NT 6.0; rv:2.0b8pre) Gecko/20101126 Firefox/4.0b8pre ID:20101126030319
Thanks Dão and Jim!
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•