Bug 608984 - Minimize, maximize/restore, close buttons shouldn't have a hover effect. r=jimm